%% Domänen-/Entitätsmodell (ER) — verifiziert gegen apps/backend-api/prisma/schema.prisma
%% Kardinalität: ||--o{ = 1:n ; ||--|| = 1:1 ; }o--o{ = n:m (über Join-Tabelle).
%% Warenbezeichnung (ASN/DESADV): Beleg-Kopf-Felder liegen auf GOODS_RECEIPT_CASE;
%% Artikel-Identität / NOS / Saison liegen auf RECEIPT_POSITION (siehe Feld-Kommentare).
%% Beleg-Aufteilung: ein zu grosser Beleg wird in ECHTE Kind-Belege zerlegt (Self-Relation
%% parentCaseId/partNo). Der gesamte Stack rechnet pro Case-Zeile, deshalb laufen Teil-Belege
%% ueberall als normale Belege mit; das Original bleibt als Klammer im Status split_container
%% zurueck — nicht zuteilbar, nicht im Pool.
%% Geteilter Beleg (gemeinsam bearbeitet, 31.08.2026): Zusammenarbeit ist ein OVERLAY aus Beteiligten
%% je Beleg (CASE_PARTICIPANT: Rolle inhaber|helfer + Status) — kein zweites ASSIGNMENT_ITEM, kein neuer
%% CaseStatus; der Beleg liegt weiter in GENAU EINEM Buendel (dem des Inhabers). Seitdem sind
%% „Position geprueft" (RECEIPT_POSITION.confirmedAt/confirmedById) und die Preiskorrektur je Groesse
%% (RECEIPT_SKU_LINE.correctedVkPrice) serverseitig persistiert — fuer ALLE Belege, nicht nur geteilte.
%% Konzept: docs/concept/beleg-zusammenarbeit-concept.md.
erDiagram
    USER ||--o{ USER_ROLE : "hat"
    ROLE ||--o{ USER_ROLE : "gewährt"
    ROLE ||--o{ ROLE_PERMISSION : "hat"
    PERMISSION ||--o{ ROLE_PERMISSION : "in"
    USER ||--o{ SHIFT : "arbeitet"
    USER ||--o{ ASSIGNMENT_BUNDLE : "besitzt"
    USER ||--o{ ISSUE : "meldet"
    USER ||--o{ ZST_RECORD : "schließt ab"
    USER ||--o{ EMPLOYEE_ABSENCE : "abwesend (krank/urlaub)"

    LOCATION ||--o{ WORKSTATION : "beherbergt"
    WORKSTATION ||--o{ SHIFT : "besetzt an"
    WORKSTATION ||--o{ USER : "zugewiesener Tisch"
    LOCATION |o--o{ GOODS_RECEIPT_CASE : "lagert an (null nur bei blocked)"
    LOCATION ||--o{ ROUTE_STOP : "angefahren von"

    GOODS_RECEIPT_CASE ||--o{ GOODS_RECEIPT_CASE : "aufgeteilt in Teil-Belege (parentCaseId/partNo)"
    GOODS_RECEIPT_CASE ||--o| WORK_INSTRUCTION_HEADER : "Beleg-Kopf-AW"
    GOODS_RECEIPT_CASE ||--o{ RECEIPT_POSITION : "enthält"
    USER |o--o{ RECEIPT_POSITION : "hat geprueft (confirmedById, SetNull)"
    RECEIPT_POSITION ||--o| POSITION_INSTRUCTION : "Positions-AW"
    RECEIPT_POSITION ||--o{ RECEIPT_SKU_LINE : "EAN × Größe"

    GOODS_RECEIPT_CASE ||--o{ ISSUE : "löst aus"
    PROBLEM_REASON ||--o{ ISSUE : "kategorisiert (manuell)"
    ISSUE ||--o{ ISSUE_MESSAGE : "Instruktions-Verlauf (Meldung/Instruktion/Rückmeldung)"
    GOODS_RECEIPT_CASE ||--o{ TRANSPORT_BOX : "verpackt in"
    GOODS_RECEIPT_CASE ||--o{ ZST_RECORD : "abgeschlossen durch"

    ASSIGNMENT_BUNDLE ||--o{ ASSIGNMENT_ITEM : "ordnet"
    ASSIGNMENT_ITEM ||--|| GOODS_RECEIPT_CASE : "referenziert"
    ASSIGNMENT_BUNDLE ||--o{ GOODS_RECEIPT_CASE : "zugewiesen (denorm.)"
    ASSIGNMENT_BUNDLE ||--o{ ROUTE_STOP : "Abholroute"

    GOODS_RECEIPT_CASE ||--o{ CASE_PARTICIPANT : "Beteiligte (geteilter Beleg)"
    USER ||--o{ CASE_PARTICIPANT : "beteiligt als Inhaber/Helfer"
    USER |o--o{ CASE_PARTICIPANT : "laedt ein (invitedById, null bei Teamleitung)"

    USER {
        string id PK
        string employeeNo UK
        string displayName
        string_array bereiche "fest, aus LocationKind abgeleitet"
        float productivityFactor
        json weeklyPattern
        boolean active
        boolean measured "Zeitarbeit false → nicht im Leistungs-KPI"
        enum skillTier "profi|fortgeschritten|basis|starter|dummy"
        string workstationId FK "zugewiesener Tisch (nullable)"
    }
    ROLE { string id PK
        string name UK }
    PERMISSION { string id PK
        string name UK }
    USER_ROLE { string userId FK
        string roleId FK }
    ROLE_PERMISSION { string roleId FK
        string permissionId FK }

    SHIFT {
        string id PK
        string employeeId FK
        date date
        datetime plannedStart
        datetime plannedEnd
        float netCapacityMinutes
        enum source "seak|pattern|teamlead"
    }
    EMPLOYEE_ABSENCE {
        string id PK
        string employeeId FK
        enum kind "krank | urlaub"
        date startDate "inklusive"
        date endDate "inklusive (bis wann mindestens)"
    }
    WORKSTATION { string id PK
        string code UK
        string locationId FK }
    LOCATION {
        string id PK
        string code UK
        enum kind "regal|palette_*|haengebahn|lagerplatz_d|workstation|printer|conveyor_*"
        int sequenceIndex
        string scanCode UK
    }

    GOODS_RECEIPT_CASE {
        string id PK
        enum source "prohandel_api|manual"
        string externalRef "ProHandel-Idempotenz"
        string weBelegNo UK
        string deliveryNoteNo "KOPF: Lieferschein"
        string deliverySourceGroupKey "Liefergruppe: X von N + manueller Override"
        string branchNo "KOPF: Filiale"
        string primaryShopNo "KOPF: primärer Shop"
        int inboundCartonCount "KOPF: Kartons der Anlieferung"
        int section "KOPF: Abschnitt 1-4,7,8"
        enum goodsTypeText "KOPF: Warenart"
        string storageLocationId FK "nullable NUR bei blocked (Intake-Gate D1)"
        string_array priorityFlags "prio|catman_due|overdue|..."
        date catManDate
        date loadPlanDate
        enum status "blocked|ready|assigned|in_progress|issue_open|problem_resolved|completed|zst_done|split_container|..."
        float effortPoints
        string assignedBundleId FK
        datetime collectedAt "Ware-holen-Haken B2: geholt-Zeitpunkt (nullable, Toggle)"
        string_array missingFields "blocked: fehlende Pflichtfelder"
        boolean deliveryGroupReleased "TL-Freigabe trotz unvollständiger Gruppe"
        string docuWareUrl "Archiv: DocuWare-Deeplink (nullable)"
        datetime completedAt "einmalig gestempelt bei completed/zst_done"
        boolean attentionFlag "TL-Topf: besondere Aufmerksamkeit"
        string attentionNote "Notiz zum Aufmerksamkeits-Flag"
        enum forwardedTo "retourenabteilung|lieferscheinbucher (nullable)"
        string parentCaseId FK "Teil-Beleg: Container-Beleg (nullable)"
        int partNo "1-basierte Teil-Nr fuer die Anzeige WE-... (2) (nullable)"
        int version "Optimistic Lock"
    }
    WORK_INSTRUCTION_HEADER {
        string caseId PK "FK→case (1:1)"
        enum inspectionLevelCode "Katalog A5: none|p10|p20|full"
        enum goodsReceiptCheckMode "quantity_only|percentage|full"
        boolean minimumQuantityCheckAlwaysRequired
        boolean priceLabelPrintRequired "abgeleitet: eine Position != kein_etikett"
        boolean zstRequired
    }
    RECEIPT_POSITION {
        string id PK
        string caseId FK
        int positionNo
        string wgr "Warengruppe"
        string supplierArticleNo "POS: Artikel-Identität"
        string supplierColor "POS: Farbe"
        string season "POS: Saison"
        boolean nosFlag "POS: NOS"
        boolean catMan "POS: Anzeige-Kennzeichen, KEIN Prio-Treiber"
        date catManDate "POS: CatMan-Termin (Anzeige)"
        string hShopNo "POS: Hauptshop (Anzeige)"
        string orderNo "POS: Ordernummer (ERP-Referenz zur Fehlerlösung)"
        enum status "open|confirmed|issue_open|completed"
        datetime confirmedAt "Position geprueft: wann (nullable; serverseitig seit 31.08.2026)"
        string confirmedById FK "Position geprueft: wer (User, SetNull) — Basis fuer Fertig-Gate und ZST-Anteil"
    }
    POSITION_INSTRUCTION {
        string positionId PK "FK→position (1:1)"
        enum labelPrintVariant "etikett_mit_preis|digitag_etikett_ohne_preis|kein_etikett"
        boolean securityRequired
        string securityTypeCode "Piktogramm-Ref: /static/pictograms/(code).svg"
        boolean onlineHandlingRequired
    }
    RECEIPT_SKU_LINE {
        string id PK
        string receiptPositionId FK
        string ean
        string size
        int expectedQuantity
        int confirmedQuantity "Ist-Menge, pro Aktion persistiert (null = nicht erfasst)"
        float correctedVkPrice "Preiskorrektur je Groesse (nullable), pro Aktion persistiert"
        enum status "open|confirmed|deviation"
    }

    ASSIGNMENT_BUNDLE {
        string id PK
        string employeeId FK
        date date
        float plannedEffortMinutes
        enum status "created|assigned|active|paused|completed|cancelled"
        enum createdBy "system|teamlead"
        int activePackIndex "Pull-Prinzip: Pack, das der MA gerade sieht"
    }
    ASSIGNMENT_ITEM {
        string id PK
        string bundleId FK
        string caseId FK "UK: Beleg in ≤1 Bündel"
        int sequence
        int packIndex "Pack im Bündel: 0 = Starter, dann Folge-Packs"
        enum createdBy "system|teamlead — Automatik räumt nur system-Platzierungen ab"
    }
    ROUTE_STOP {
        string id PK
        string bundleId FK
        int sequence
        string locationId FK
        string_array orderIds
        boolean scanRequired
        datetime scannedAt
    }

    PROBLEM_REASON {
        string id PK
        string label "admin-verwalteter Katalog (frei definierbar)"
        boolean active
        int sortOrder
        string defaultInstruction "nullable — Standardanweisung (Vorlage Instruktions-Dialog)"
        boolean autoInsert "true = Vorlage automatisch vorausfuellen"
    }
    ISSUE {
        string id PK
        string caseId FK
        enum scope "position|sku_line"
        string employeeId FK
        enum kind "manual|over_delivery|under_delivery|price_deviation"
        string reasonId FK "→PROBLEM_REASON (nur kind=manual)"
        string reasonLabel "Label-Snapshot des Katalogs"
        int deviationQty "Ist−Soll (Mehr-/Minderlieferung)"
        float expectedVkPrice "VK-Etikett-Preis"
        float correctedVkPrice "korrigierter VK (Preisabweichung)"
        enum status "open|instruction_sent (Einzel-Status je Meldung)"
    }
    ISSUE_MESSAGE {
        string id PK
        string issueId FK
        string authorId "OIDC-sub bzw. User-Id (Snapshot)"
        string authorName "Anzeigename (Snapshot)"
        enum authorRole "employee|teamlead"
        enum kind "meldung|instruktion|rueckmeldung"
        string text
        datetime createdAt
    }
    TRANSPORT_BOX {
        string id PK
        string caseId FK
        int boxNo
        string shopAreaNo
        enum labelStatus "not_required|pending|printed|reprinted"
        boolean sealed
        string sealCode UK
    }
    ZST_RECORD {
        string id PK
        string idempotencyKey UK
        string caseId FK
        string employeeId FK
        int completedQuantity
        float effortPoints
        datetime exportedAt
    }

    WORKFLOW_EVENT {
        string id PK
        bigint seq UK "monoton steigend"
        string eventType
        string entityType "polymorphe Referenz"
        string entityId
        enum actorType "system|employee|teamlead|admin"
        string hash "SHA256-Kette"
        string prevHash
    }
    APP_CONFIG {
        string key PK "Singleton rule_config"
        json value "Zod RuleConfig (inkl. collaboration.helpBeforeNextBundle)"
    }
    LOAD_PLAN_RULE {
        string id PK
        string shopAreaNo
        int weekday
        date validFrom
    }
    PRIORITY_RULE { string id PK
        string key UK
        int rank }
    EFFORT_RULE { string id PK
        string driverKey UK
        float weight }

    %% Mock-ERP-Kataloge (Teamlead-Feedback 03.07.2026) — eigenständige Lookup-Tabellen,
    %% per Code referenziert (wgr / inspectionLevelCode), keine FK-Relationen.
    WGR_CATALOG {
        string wgr PK "Warengruppe, z.B. 218110"
        string description "Klartext, z.B. D-Bermuda"
    }
    INSPECTION_LEVEL {
        enum code PK "none|p10|p20|full"
        string label
        float percentage
        string description "Aufgabentext"
    }
    ONLINE_SIZE_PREFERENCE {
        string id PK
        string wgr "UK: wgr+sizeVariant"
        string sizeVariant
        string preferredSize
        string alternativeSize "optional"
    }

    %% Teamlead → Mitarbeiter-App (Vorverteilungs-Eingriffe): Nachricht + Gelesen-Quittung.
    TEAMLEAD_MESSAGE {
        string id PK
        string employeeId FK
        string caseId "optional (Beleg-Bezug)"
        string text
        string createdBy
        datetime createdAt
        datetime readAt "null = ungelesen"
    }
    USER ||--o{ TEAMLEAD_MESSAGE : "erhaelt"

    %% Geteilter Beleg (31.08.2026): Beteiligung = Beleg x Mitarbeiter mit Rolle und Status.
    %% Die Inhaber-Zeile entsteht beim ersten Einladen (bzw. beim Gemeinsam-Zuweisen durch die
    %% Teamleitung) als `angenommen` und traegt spaeter das `teil_erledigt` des Inhabers; eine
    %% Zusammenarbeit ist AKTIV, sobald mindestens ein Helfer angenommen|teil_erledigt ist.
    %% Verlaesst der Beleg den Karren des Inhabers (entziehen/verschieben/stornieren/parken/„Rest parken"),
    %% werden die Zeilen geloescht (case.collaboration_dissolved); gepruefte Positionen bleiben geprueft.
    CASE_PARTICIPANT {
        string id PK
        string caseId FK "onDelete Cascade"
        string employeeId FK "UK: caseId+employeeId (participant_case_employee); Index employeeId+status"
        enum role "inhaber|helfer"
        enum status "eingeladen|angenommen|abgelehnt|teil_erledigt|entfernt"
        string invitedById FK "User.id des Einladenden (null bei Teamlead/System, SetNull)"
        string invitedByLabel "Anzeigename-Snapshot (z. B. Hakan Yilmaz, Teamleitung)"
        string message "optionale Einladungs-Nachricht"
        datetime invitedAt
        datetime collectedAt "Ware-holen-Haken DIESES Helfers (01.09.2026) — der Inhaber hakt am Beleg ab (GoodsReceiptCase.collectedAt); ein gemeinsamer Haken haette fuer alle gegolten"
        datetime respondedAt "angenommen/abgelehnt"
        datetime partDoneAt "Teilbeleg erledigt"
        datetime removedAt "durch Teamleitung entfernt"
        string removedByLabel
    }
